--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,10 +12,9 @@ spring:
     prefix: classpath:/templates/
     suffix: .html
 
-
   jpa:
     hibernate:
-      ddl-auto: create
+#      ddl-auto: create
     properties:
       hibernate:
         #        ? ??? ???? ????? ??? ??? ???? ??? size?? IN??? ????.
